--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         '<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' +
         (coverSupport ? ', viewport-fit=cover' : '') + '" />')
     </script>
-    <title></title>
+    <title>房地产抽奖</title>
+	   <link rel="icon" href="./static/but.png" /> 
+	   
     <!--preload-links-->
     <!--app-context-->
   </head>
